# bulk-data-service

./: .env-example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  yoyo.ini
.github/workflows/: build-and-deploy-job.yml  deploy-to-dev.yml  deploy-to-prod.yml  test.yml
azure-deployment/: azure-resource-manager-deployment-template.yml  generate-manifest-from-template.sh  manual-azure-deploy-from-local.sh  manual-azure-deploy-secrets-example.env  manual-azure-deploy-variables-example.env
azure-deployment/nginx-reverse-proxy/: nginx.conf
azure-provision/: add-default-config-to-github-variables.sh  azure-create-resources.sh  default-github-config-template.env
db-migrations/: 20240531_01_iY5Qa.rollback.sql  20240531_01_iY5Qa.sql  20240827_01_pVOLG.rollback.sql  20240827_01_pVOLG.sql
provisioning/: azure-create-resources.sh
src/: iati_bulk_data_service.py
src/bulk_data_service/: checker.py  dataset_indexing.py  dataset_remover.py  dataset_updater.py  zipper.py  zippers.py
src/config/: config.py  initialisation.py
src/dataset_registration/: factory.py  iati_register_your_data.py  iati_registry_ckan.py  registration_services.py
src/utilities/: azure.py  db.py  http.py  logging.py  misc.py  prometheus.py
tests-local-environment/: .env  docker-compose.yml  mockoon-registration-and-data-server-config.json
tests/artifacts/: ckan-registry-datasets-01-1-dataset-403.json  ckan-registry-datasets-01-1-dataset.json  (+4 more)
tests/helpers/: helpers.py
web/: 404.html  index-template.html  index.html
(+16 files in other folders)
